# SWE_SocialMediaPlatform

./: .dockerignore  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  WorktimeLog.txt  docker-compose.yml  openapi.yml  package-lock.json  pyproject.toml  test.db
.github/workflows/: ci.yml  deploy.yml  python-app.yml
app/: database.py  main.py  models.py  schemas.py
backend/: Dockerfile  database.py  main.py  models.py  schemas.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.vitest.json  vitest.setup.ts
frontend/app/: package-lock.json
frontend/app/services/: comments.service.ts  posts.service.ts
frontend/services/: comments.service.spec.ts  comments.service.ts  posts.service.spec.ts  posts.service.ts
frontend/sqlite/: social.db
frontend/src/: index.html
frontend/src/app/: app.config.ts  app.html  app.routes.ts  (+2 more)
frontend/tests/: test-utils.ts
image-resizer/: Dockerfile  main.py  models.py
post_ai_generation/: .env  Dockerfile  Dockerfile_local_model_unused.txt  consumer.py  text_generator_local_model_unused.py  text_generator_mistral.py
post_generator/: Dockerfile  __init__.py  consumer.py  generator.py  main.py
tests/: conftest.py  test_comments.py  test_comments_search.py  test_delete_endpoints.py  test_posts.py  test_posts_search.py  test_search.py
tests/comments/: test_comments_create.py  test_comments_delete.py  test_comments_read.py  test_comments_search.py  test_comments_update.py
tests/posts/: test_posts_create.py  test_posts_delete.py  test_posts_read.py  test_posts_search.py
(+20 files in other folders)
