[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python =">=3.12,<3.15"
dependencies = [
    "black>=25.9.0",
    "fastapi[standard]>=0.121.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "pika>=1.3.2",
    "pillow>=12.0.0",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
    "transformers (>=4.57.3,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.isort]
profile = "black"

